# kryptogo-meme-trader

./: .gitignore  README.ja.md  README.md  README.zh-CN.md  README.zh-TW.md
.github/workflows/: publish-skill.yml
mcp-server/: README.md  pyproject.toml
mcp-server/src/kryptogo_meme_trader/: __init__.py  __main__.py  api_client.py  app.py  config.py  server.py
mcp-server/src/kryptogo_meme_trader/tools/: __init__.py  analysis.py  discovery.py  labels.py  portfolio.py  trading.py
scripts/: bump-version.sh
skill/: .env.example  SKILL.md  package.json
skill/references/: api-reference.md
