[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kryptogo-meme-trader"
version = "2.5.5"
description = "KryptoGO MCP server for Solana meme coin analysis and trading"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.25,<2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
trading = ["solders>=0.21"]

[project.scripts]
kryptogo-meme-trader = "kryptogo_meme_trader.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kryptogo_meme_trader"]
